--- a/intex.html
+++ b/intex.html
@@ -1,22 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le web et ses infrastructure</title>
 </head>
-<style>
-    body {
-        background-color: white;
-    }
-    h1 { 
-        color:red
-    }
-    h2 {
-        color: black;
-    }
-</style>
-<html>
 <body>
     <h1>Le Web et ses infrastructures</h1>
     <p>Dans le web, il y a aussi le Cloud, les Bases de données big data, SQL, cookies (aspect informationnel), RGPD...
