--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <meta charset="utf-8" />
     <title>Le web et ses infrastructure</title>
 </head>
 <body>
