--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
     <h1>Le Web et ses infrastructures</h1>
     <p>Dans le web, il y a aussi le Cloud, les Bases de données big data, SQL, cookies (aspect informationnel), RGPD...
+        <h3>Le RGPD, qu'est-ce que c'est ?</h3>
+    <p>Le RGPD c'est Le règlement général de protection des données (RGPD) c'est donc un texte réglementaire européen qui encadre le traitement des données de manière égalitaire sur tout le territoire de l'Union européenne (UE).</p>
     <h2>Où sont stockées toutes les données du web ?</h2>
     Les données du web comme les sites, les fichiers et les images sont tous stockés dans des data center aussi appelé base de données avec à l'intérieur des serveurs.
         C'est pour cela que nous pouvons voir des problèmes avec les sites quand le data center de Paris nommé Paris Digital Park qui possède plus de 7 hectares de serveurs. 
@@ -19,11 +21,10 @@
     <h3>Qu'est ce que le SQL ?</h3><br>
     Le SQL est le language infomatique que votre ordinateur envoie en requête sous forme de paquet au serveur. Une fois que le serveur a trouvé ce que vous recherchez, alors à ce moment là le serveur va vous 
         renvoyer une requête en SQL qui sera automatiquement traduite par votre ordinateur.
-    Vous acceptez tous le temps les cookies, mais savez-vous réellement ce que c'est ?
+    <h4>Vous acceptez tous le temps les cookies, mais savez-vous réellement ce que c'est ?</h4><br>
     Les cookies sont de petit fichiers texte enregistrés sur votre appareil, et qui va servir a votre appareil à vous faire des publicités plus ciblées. Comme si vous allez sur le site d'apple et que vous 
         allez sur youtube alors youtube vous mettra plus facilement des pubs pour l'appareil apple. Un exemple dans les 2 documents ci dessous.</p>
-    <h3>Le RGPD, qu'est-ce que c'est ?</h3>
-    <p>Le RGPD c'est Le règlement général de protection des données (RGPD) c'est donc un texte réglementaire européen qui encadre le traitement des données de manière égalitaire sur tout le territoire de l'Union européenne (UE).</p>
+    
     <p>Merci d'avoir lu cet article. J'espère vous avoir appris des choses !</p>
     <h4>Site internet de l'equipe D (Elouan, Mathieu, Camille, Aaron, Enzo)</h4>
 </body>
